--- a/DeLivre/DeLivre/Views/Info.xaml
+++ b/DeLivre/DeLivre/Views/Info.xaml
@@ -2,8 +2,7 @@
 <pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-                xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-                xmlns:cardView="clr-namespace:DeLivre"                        
+                xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"                                      
                 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
                 x:Class="DeLivre.Views.Info">
 
@@ -20,98 +19,95 @@
     <StackLayout WidthRequest="350" HeightRequest="400" BackgroundColor="White" Padding="5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
         <ScrollView>
             <StackLayout>
-                <cardView:CardView x:Name="CardEstabelecimento" BackgroundColor="White" CardViewHasShadow="True">
-                    <cardView:CardView.CardViewContent>
-                        <StackLayout x:Name="Stack" 
+                <StackLayout x:Name="Stack" 
                              HorizontalOptions="Center"                                         
                              VerticalOptions="Center">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="120"/>
-                                </Grid.ColumnDefinitions>
-                                <controls:CircleImage x:Name="ImagemEstab" Grid.Column="1" 
-                                                      BorderColor="#EF5350" 
-                                                      BorderThickness="2" 
-                                                      Margin="0,-70,0,0" 
-                                                      WidthRequest="300" 
-                                                      HeightRequest="300"                                                 
-                                                      Aspect="AspectFit"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="120"/>
+                        </Grid.ColumnDefinitions>
+                        <controls:CircleImage x:Name="ImagemEstab" 
+                                              Grid.Column="1" 
+                                              BorderColor="#EF5350" 
+                                              BorderThickness="2" 
+                                              Margin="0,-70,0,0" 
+                                              WidthRequest="300" 
+                                              HeightRequest="300"                                                 
+                                              Aspect="AspectFit"/>
 
-                                <!--<Label x:Name="lbl_Entrega"                                              
+                        <!--<Label x:Name="lbl_Entrega"                                              
                                Grid.Column="0"
                                Text="ENTREGA" 
                                HorizontalTextAlignment="Center"
                                TextColor="#E53935"                              
                                FontSize="14" FontAttributes="Bold"/>-->
 
-                                <Label                                      
-                                       Grid.Column="0"
-                                       Text="TEMPO" Margin="0, 10"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="12" FontAttributes="Bold"/>
+                        <Label x:Name="lbl_To"                                     
+                               Grid.Column="0"
+                               Text="TEMPO" Margin="0, 10"
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"                              
+                               FontSize="12" FontAttributes="Bold"/>
 
-                                <Label x:Name="lbl_Tempo"                              
-                                       Grid.Column="0"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"
-                                       Margin="0,30,0,0"
-                                       FontSize="13"/>
+                        <Label x:Name="lbl_Tempo"                              
+                               Grid.Column="0"
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"
+                               Margin="0,30,0,0"
+                               FontSize="13"/>
 
-                                <Label x:Name="lbl_TitleFrete"                                              
-                                       Grid.Column="0"
-                                       Text="FRETE" Margin="0,47"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="12" FontAttributes="Bold"/>
+                        <Label x:Name="lbl_TitleFrete"                                              
+                               Grid.Column="0"
+                               Text="FRETE" Margin="0,47"
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"                              
+                               FontSize="12" FontAttributes="Bold"/>
 
-                                <Label x:Name="lbl_Frete"                                            
-                                       Grid.Column="0"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"
-                                       Margin="0,60,0,0"
-                                       FontSize="13" />
+                        <Label x:Name="lbl_Frete"                                            
+                               Grid.Column="0"
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"
+                               Margin="0,60,0,0"
+                               FontSize="13" />
 
 
-                                <!--<Label x:Name="Entrega"                                             
+                        <!--<Label x:Name="Entrega"                                             
                                Grid.Column="2"
                                HorizontalTextAlignment="Center"
                                Text="FUNCIONAMENTO"
                                TextColor="#E53935"                              
                                FontSize="14" FontAttributes="Bold"/>-->
 
-                                <Label x:Name="lbl_pedidominimo"                                              
-                                       Grid.Column="2" Margin="0,10"
-                                       Text="PEDIDO MINIMO" 
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="12" FontAttributes="Bold"/>
+                        <Label x:Name="lbl_pedidominimo"                                              
+                               Grid.Column="2" Margin="0,10"
+                               Text="PEDIDO MINIMO" 
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"                              
+                               FontSize="12" FontAttributes="Bold"/>
 
-                                <Label x:Name="lbl_Horario_Funcionamento"                                             
-                                       TextColor="{StaticResource asphaltPrimary}"
-                                       Grid.Column="2" 
-                                       HorizontalTextAlignment="Center"
-                                       Margin="0,30,0,0"
-                                       FontSize="13"/>
+                        <Label x:Name="lbl_Horario_Funcionamento"                                             
+                               TextColor="{StaticResource asphaltPrimary}"
+                               Grid.Column="2" 
+                               HorizontalTextAlignment="Center"
+                               Margin="0,30,0,0"
+                               FontSize="13"/>
 
-                                <Label Text="LOCAL"                                        
-                                       Grid.Column="2" Margin="0,47"                              
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="12" FontAttributes="Bold"/>
+                        <Label Text="LOCAL"                                        
+                               Grid.Column="2" Margin="0,47"                              
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"                              
+                               FontSize="12" FontAttributes="Bold"/>
 
-                                <Label x:Name="lbl_Local"                                              
-                                       Grid.Column="2"
-                                       Margin="0,60,0,0"
-                                       HorizontalTextAlignment="Center"
-                                       TextColor="{StaticResource asphaltPrimary}"                              
-                                       FontSize="13"/>
-                            </Grid>
-                        </StackLayout>
-                    </cardView:CardView.CardViewContent>
-                </cardView:CardView>
+                        <Label x:Name="lbl_Local"                                              
+                               Grid.Column="2"
+                               Margin="0,60,0,0"
+                               HorizontalTextAlignment="Center"
+                               TextColor="{StaticResource asphaltPrimary}"                              
+                               FontSize="13"/>
+                    </Grid>
+                </StackLayout>
                 <Label x:Name="lbl_Endereco" Margin="0,-80"                                     
                        HorizontalTextAlignment="Center"
                        TextColor="{StaticResource asphaltPrimary}"                         
@@ -125,59 +121,59 @@
 
                 <StackLayout Orientation="Vertical" Margin="0,-65,0,0">
                     <Label Text="HORÁRIOS DE FUNCIONAMENTO" FontAttributes="Bold" 
-                       TextColor="{StaticResource asphaltPrimary}" Margin="0,0,0,5" 
-                       HorizontalTextAlignment="Center" FontSize="14"/>
+                           TextColor="{StaticResource asphaltPrimary}" Margin="0,0,0,5" 
+                           HorizontalTextAlignment="Center" FontSize="14"/>
 
                     <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,0,0,0">
                         <StackLayout Spacing="2" Orientation="Vertical" VerticalOptions="Start" Margin="5,0,5,0">
                             <Label x:Name="lbl_Segunda"                                        
-                               HorizontalTextAlignment="Start"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13" />
+                                   HorizontalTextAlignment="Start"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"  /> 
                             <Label x:Name="lbl_Terca"                                        
-                               HorizontalTextAlignment="Start"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="Start"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                             <Label x:Name="lbl_Quarta"                                       
-                               HorizontalTextAlignment="Start"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="Start"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                             <Label x:Name="lbl_Quinta"               
-                               HorizontalTextAlignment="Start"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="Start"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                         </StackLayout>
 
                         <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,-10,0">
                             <Label x:Name="lbl_Sexta"                                       
-                               HorizontalTextAlignment="End"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="End"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                             <Label x:Name="lbl_Sabado"                                        
-                               HorizontalTextAlignment="End"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="End"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                             <Label x:Name="lbl_Domingo"                                       
-                               HorizontalTextAlignment="End"
-                               TextColor="{StaticResource asphaltPrimary}"                           
-                               FontSize="13"/>
+                                   HorizontalTextAlignment="End"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="13"/>
                         </StackLayout>
                     </StackLayout>
 
                     <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
-                       TextColor="{StaticResource asphaltPrimary}"  Margin="0,5,0,5"               
-                       HorizontalTextAlignment="Center" FontSize="14"/>
+                           TextColor="{StaticResource asphaltPrimary}"  Margin="0,5,0,5"               
+                           HorizontalTextAlignment="Center" FontSize="14"/>
 
                     <Button x:Name="btn_instagram" FontSize="12"
-                        Text="SIGA-NOS NO INSTAGRAM"
-                        TextColor="White"
-                        BorderRadius="10" 
-                        WidthRequest="300"
-                        HeightRequest="40"                         
-                        Clicked="Btn_instagram_Clicked"
-                        BackgroundColor="#E53935"
-                        HorizontalOptions="Center" 
-                        VerticalOptions="Center"></Button>
+                            Text="SIGA-NOS NO INSTAGRAM"
+                            TextColor="White"
+                            BorderRadius="10" 
+                            WidthRequest="300"
+                            HeightRequest="40"                         
+                            Clicked="Btn_instagram_Clicked"
+                            BackgroundColor="#E53935"
+                            HorizontalOptions="Center" 
+                            VerticalOptions="Center"></Button>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
