--- a/DeLivre/DeLivre/Views/Detalhe/Detalhes.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Detalhes.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"            
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"              
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
+             xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
              x:Class="DeLivre.Views.Detalhe.Detalhes">
 
@@ -16,9 +17,9 @@
 
     <StackLayout WidthRequest="360" HeightRequest="400" BackgroundColor="Transparent" Padding="5,5" HorizontalOptions="Center" VerticalOptions="Center">
         <Frame x:Name="PopUpDialogLayout" Padding="5"
-                HorizontalOptions="Center" VerticalOptions="CenterAndExpand"                                              
-                HasShadow="true" CornerRadius="5"              
-                Margin="16"  OutlineColor="#EF5350">
+               HorizontalOptions="Center" VerticalOptions="CenterAndExpand"                                              
+               HasShadow="true" CornerRadius="5"              
+               Margin="16" OutlineColor="#EF5350">
             <StackLayout>
                 <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
                   
@@ -51,26 +52,56 @@
         <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
        
         <ScrollView>
-            <StackLayout HeightRequest="260">
+                    <StackLayout HeightRequest="350">
+                        <Label x:Name="lbl_Valor" FontSize="16"
+                               FontAttributes="Bold"
+                               HorizontalTextAlignment="Center"                     
+                               TextColor="{StaticResource asphaltPrimary}"/>
 
-                <Label x:Name="lbl_Valor" FontSize="16"
-                           FontAttributes="Bold"
-                           HorizontalTextAlignment="Center"                     
-                           TextColor="{StaticResource asphaltPrimary}"/>
+                        <!--<Label x:Name="lbl_Adicionais" Text="Porções:" FontSize="15"  
+                               HorizontalTextAlignment="Center" FontAttributes="Bold"                   
+                               TextColor="{StaticResource asphaltPrimary}"/>
 
-                <StackLayout Orientation="Vertical" WidthRequest="20">
-                    <Label Text="Quantidade:" 
-                               FontSize="20" Margin="0,15"      
-                               HorizontalTextAlignment="Center"
-                               TextColor="{StaticResource asphaltPrimary}" />
+                        <StackLayout x:Name="Stack_Adicionais" Orientation="Horizontal">
+                            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
+                                <input:CheckBox x:Name="Adicional_00" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_02" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_04" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_06" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_08" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_10" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_12" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_14" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_16" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_18" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                            </StackLayout>
 
-                    <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
-                                         HeightRequest="40" WidthRequest="10" BackgroundColor="#EF5350" 
-                                         Value="{Binding Quantidade}" Visual="Material"
-                                         ValueChanged="Stepper_ValueChanged"
-                                         Increment="1" Margin="20,0,20,0" />
+                            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
+                                <input:CheckBox x:Name="Adicional_01" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_03" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_05" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_07" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_09" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_11" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_13" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_15" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_17" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_19" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                            </StackLayout>
+                        </StackLayout>-->
 
-                    <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
+                        <StackLayout Orientation="Vertical" WidthRequest="20">
+                            <Label Text="Quantidade:"  FontSize="20"
+                                   Margin="0,15" HorizontalTextAlignment="Center"                                 
+                                   TextColor="{StaticResource asphaltPrimary}" />
+
+                            <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
+                                     HeightRequest="40" WidthRequest="10" BackgroundColor="#EF5350" 
+                                     Value="{Binding Quantidade}" Visual="Material"
+                                     ValueChanged="Stepper_ValueChanged"
+                                     Increment="1" Margin="20,0,20,0" />
+
+                            <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
                            HorizontalTextAlignment="Center" Text="Observação:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
                     
