--- a/DeLivre/DeLivre/Views/More/Info.xaml
+++ b/DeLivre/DeLivre/Views/More/Info.xaml
@@ -4,7 +4,7 @@
                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
                 xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"                                      
                 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-                x:Class="DeLivre.Views.Info">
+                x:Class="DeLivre.Views.More.Info">
 
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation
@@ -16,12 +16,10 @@
               EasingIn="SpringIn"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="350" HeightRequest="400" BackgroundColor="White" Padding="5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+    <StackLayout WidthRequest="300" HeightRequest="400" BackgroundColor="White" Padding="5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
         <ScrollView>
             <StackLayout>
-                <StackLayout x:Name="Stack" 
-                             HorizontalOptions="Center"                                         
-                             VerticalOptions="Center">
+                <StackLayout x:Name="Stack" HorizontalOptions="Center" VerticalOptions="Center">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
@@ -33,16 +31,9 @@
                                               BorderColor="#EF5350" 
                                               BorderThickness="2" 
                                               Margin="0,-70,0,0" 
-                                              WidthRequest="300" 
-                                              HeightRequest="300"                                                 
+                                              WidthRequest="350" 
+                                              HeightRequest="350"                                                 
                                               Aspect="AspectFit"/>
-
-                        <!--<Label x:Name="lbl_Entrega"                                              
-                               Grid.Column="0"
-                               Text="ENTREGA" 
-                               HorizontalTextAlignment="Center"
-                               TextColor="#E53935"                              
-                               FontSize="14" FontAttributes="Bold"/>-->
 
                         <Label x:Name="lbl_To"                                     
                                Grid.Column="0"
@@ -71,14 +62,6 @@
                                TextColor="{StaticResource asphaltPrimary}"
                                Margin="0,60,0,0"
                                FontSize="13" />
-
-
-                        <!--<Label x:Name="Entrega"                                             
-                               Grid.Column="2"
-                               HorizontalTextAlignment="Center"
-                               Text="FUNCIONAMENTO"
-                               TextColor="#E53935"                              
-                               FontSize="14" FontAttributes="Bold"/>-->
 
                         <Label x:Name="lbl_pedidominimo"                                              
                                Grid.Column="2" Margin="0,10"
@@ -119,52 +102,79 @@
                        TextColor="{StaticResource asphaltPrimary}"                           
                        FontSize="13" />
 
-                <StackLayout Orientation="Vertical" Margin="0,-65,0,0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center" Margin="0,-65,0,0">
                     <Label Text="HORÁRIOS DE FUNCIONAMENTO" FontAttributes="Bold" 
                            TextColor="{StaticResource asphaltPrimary}" Margin="0,0,0,5" 
                            HorizontalTextAlignment="Center" FontSize="14"/>
 
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,0,0,0">
-                        <StackLayout Spacing="2" Orientation="Vertical" VerticalOptions="Start" Margin="5,0,5,0">
-                            <Label x:Name="lbl_Segunda"                                        
-                                   HorizontalTextAlignment="Start"
+                    <Label x:Name="lbl_Segunda"                                        
+                                   HorizontalTextAlignment="Center"
                                    TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"  /> 
-                            <Label x:Name="lbl_Terca"                                        
-                                   HorizontalTextAlignment="Start"
+                                   FontSize="10"  />
+                    <Label x:Name="lbl_Terca"                                        
+                                   HorizontalTextAlignment="Center"
                                    TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                            <Label x:Name="lbl_Quarta"                                       
-                                   HorizontalTextAlignment="Start"
+                                   FontSize="10"/>
+                    <Label x:Name="lbl_Quarta"                                       
+                                   HorizontalTextAlignment="Center"
                                    TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                            <Label x:Name="lbl_Quinta"               
-                                   HorizontalTextAlignment="Start"
+                                   FontSize="10"/>
+                    <Label x:Name="lbl_Quinta"               
+                                   HorizontalTextAlignment="Center"
                                    TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                        </StackLayout>
+                                   FontSize="10"/>
+                    <Label x:Name="lbl_Sexta"                                       
+                                   HorizontalTextAlignment="Center"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="10"/>
+                    <Label x:Name="lbl_Sabado"                                        
+                                   HorizontalTextAlignment="Center"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="10"/>
+                    <Label x:Name="lbl_Domingo"                                       
+                                   HorizontalTextAlignment="Center"
+                                   TextColor="{StaticResource asphaltPrimary}"                           
+                                   FontSize="10"/>
+                </StackLayout>
 
-                        <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,-10,0">
-                            <Label x:Name="lbl_Sexta"                                       
-                                   HorizontalTextAlignment="End"
-                                   TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                            <Label x:Name="lbl_Sabado"                                        
-                                   HorizontalTextAlignment="End"
-                                   TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                            <Label x:Name="lbl_Domingo"                                       
-                                   HorizontalTextAlignment="End"
-                                   TextColor="{StaticResource asphaltPrimary}"                           
-                                   FontSize="13"/>
-                        </StackLayout>
-                    </StackLayout>
+                <Label Text="FORMAS DE PAGAMENTO" FontAttributes="Bold" 
+                       TextColor="{StaticResource asphaltPrimary}" Margin="0,5,0,5"               
+                       HorizontalTextAlignment="Center" FontSize="14"/>
+                
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                    <ContentView x:Name="FundoOpenOrClose"                                                     
+                                 BackgroundColor="#EF5350"                                
+                                 HeightRequest="25"
+                                 WidthRequest="100">
 
-                    <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
+                        <Label x:Name="OpenOrClose"                                                  
+                           Text="DINHEIRO"
+                           FontAttributes="Bold"
+                           FontSize="10"
+                           VerticalOptions="Center"
+                           HorizontalOptions="Center"/>
+                    </ContentView>
+                    
+                    <ContentView x:Name="ExibirCartao"                               
+                                 BackgroundColor="#EF5350"                             
+                                 HeightRequest="20"
+                                 WidthRequest="100">
+
+                        <Label Text="CARTÃO"                                                                                              
+                               FontAttributes="Bold"
+                               FontSize="10"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"/>
+
+
+                    </ContentView>
+                </StackLayout>
+                
+                <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
                            TextColor="{StaticResource asphaltPrimary}"  Margin="0,5,0,5"               
                            HorizontalTextAlignment="Center" FontSize="14"/>
 
-                    <Button x:Name="btn_instagram" FontSize="12"
+                <Button x:Name="btn_instagram" FontSize="12"
                             Text="SIGA-NOS NO INSTAGRAM"
                             TextColor="White"
                             BorderRadius="10" 
@@ -173,8 +183,7 @@
                             Clicked="Btn_instagram_Clicked"
                             BackgroundColor="#E53935"
                             HorizontalOptions="Center" 
-                            VerticalOptions="Center"></Button>
-                </StackLayout>
+                            VerticalOptions="Center"/>
             </StackLayout>
         </ScrollView>
     </StackLayout>
